[package]
name = "ssb-multiformats"
version = "0.1.0"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]
edition = "2018"
license = "AGPL-3.0"

[dependencies]
base64 = "0.10.0"
serde = "1.0.80"
ring = "0.13.2"
untrusted = "0.6.2"
varu64 = "0.6.1"
ctlv = { git = "https://github.com/AljoschaMeyer/ctlv" }
