[package]
name = "ssb-multiformats"
version = "0.4.1"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]
edition = "2018"
license = "AGPL-3.0"
description = "Key, feed id, and message hash types used by Secure Scuttlebutt"
repository = "https://github.com/sunrise-choir/ssb-multiformats"
documentation = "https://docs.rs/ssb-multiformats/"
readme = "README.md"
keywords = ["ssb", "scuttlebutt"]

[dependencies]
base64 = "0.13.0"
serde = "1.0.126"
ssb-crypto = {version = "0.2.2", default_features = false}

[dev-dependencies]
matches = "0.1.8"

[features]
default = ["dalek"]
dalek = ["ssb-crypto/default"]
sodium = ["ssb-crypto/sodium", "ssb-crypto/alloc"]
